# ctypes-mosquitto

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  benchmark.csv  docker-compose.yml  pyproject.toml
benchmarks/: _aiomqtt.py  _amqtt.py  _ctypes_mosq.py  _ctypes_mosq_async.py  _gmqtt.py  _mqttools.py  _paho.py  config.py
ctypes_mosquitto/: aio.py  client.py  constants.py  core.py  helpers.py
ctypes_mosquitto/bindings/: __init__.py  libc.py  mosquitto.py
scripts/: bench.py  plot.py
tests/: conftest.py  test_aio.py  test_bindings.py  test_bindings_libc.py  test_client.py  test_client_v5.py  test_core.py  test_helpers.py
