[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ctypes-mosquitto"
version = "0.1.0"
description = "A lightweight Python MQTT client implemented as a binding to libmosquitto via ctypes."
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"

[tool.black]
target-version = ["py314"]
line-length = 119
